<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="library">MusicLibrary</string>
    <string name="select_genre">Select genre</string>
    <string name="go">Go</string>
    <string name="reset">Reset</string>
    <string name="author_text">Author with name very, very large very, very large</string>
    <string name="album_text">Album very large, very large, very large</string>
    <string name="description">Image of album musical</string>
    <string name="abbeyroad">“It was a very happy record,” said producer George Martin, describing this album in The Beatles Anthology. “I guess it was happy because everybody thought it was going to be the last.” Indeed, Abbey Road — recorded in two months during the summer of 1969 — almost never got made at all. That January, the Beatles were on the verge of a breakup, exhausted and angry with one another after the disastrous sessions for the aborted Get Back LP, later salvaged as Let It Be [see No. 342]. Yet determined to go out with the same glory with which they had ﬁrst entranced the world at the start of the decade, the group reconvened at EMI’s Abbey Road Studios to make their most polished album: a collection of superb songs cut with an attention to reﬁned detail, then segued together (especially on Side Two) with conceptual force.There was no thematic link, other than the Beatles’ unique genius. John Lennon veered from the stormy metal of “I Want You (She’s So Heavy)” to the exquisite vocal sunrise of “Because.” Paul McCartney was saucy (“Oh! Darling”), silly (“Maxwell’s Silver Hammer”), and deliciously bitter (“You Never Give Me Your Money”). George Harrison proved his long-secret worth as a composer with “Something” (later covered by Frank Sinatra) and the folk-pop diamond “Here Comes the Sun,” written in his friend Eric Clapton’s garden after a grim round of business meetings. Lennon, McCartney, and Harrison reputedly sang more three-part harmonies here than on any other Beatles album. That warm feeling — a sense of an increasingly divided band warmly coming together as friends — may be one reason Abbey Road has become the most beloved Beatles album of all time.</string>
    <string name="nevermind">This is what Britain sounded like in late 1966 and early 1967: ablaze with rainbow blues, orchestral guitar feedback, and cosmic possibility. Jimi Hendrix’s incendiary guitar was historic in itself, the luminescent sum of his chitlin-circuit labors with Little Richard and the Isley Brothers and his melodic exploitation of amp howl. But it was the pictorial heat of songs like “Manic Depression” and “The Wind Cries Mary” that established the transcendent promise of psychedelia. Backed by drummer Mitch Mitchell and bassist Noel Redding, the guitarist made soul music for inner space. “It’s a collection of free feeling and imagination,” he said of the album. “Imagination is very important.” Widely assumed to be about an acid trip, “Purple Haze” had “nothing to do with drugs,” Hendrix insisted. “‘Purple Haze’ was all about a dream I had that I was walking under the sea.”</string>
    <string name="areyouexperienced">This is what Britain sounded like in late 1966 and early 1967: ablaze with rainbow blues, orchestral guitar feedback, and cosmic possibility. Jimi Hendrix’s incendiary guitar was historic in itself, the luminescent sum of his chitlin-circuit labors with Little Richard and the Isley Brothers and his melodic exploitation of amp howl. But it was the pictorial heat of songs like “Manic Depression” and “The Wind Cries Mary” that established the transcendent promise of psychedelia. Backed by drummer Mitch Mitchell and bassist Noel Redding, the guitarist made soul music for inner space. “It’s a collection of free feeling and imagination,” he said of the album. “Imagination is very important.” Widely assumed to be about an acid trip, “Purple Haze” had “nothing to do with drugs,” Hendrix insisted. “‘Purple Haze’ was all about a dream I had that I was walking under the sea.”</string>
    <string name="velvetunderground">“We were trying to do a Phil Spector thing with as few instruments as possible,” John Cale, the classically trained pianist and viola player of the Velvet Underground, once said of this record. It was no idle boast. Much of what we take for granted in rock would not exist without this New York band or its seminal debut: the androgynous sexuality of glitter, punk’s raw noir, the blackened-riff howl of grunge and noise rock. It is a record of fearless breadth and lyrical depth. Singer-songwriter Lou Reed documented carnal desire and drug addiction with a pop wisdom he learned as a song-factory composer for Pickwick Records. Cale introduced the power of pulse and drone (from his work in early minimalism); guitarist Sterling Morrison and drummer Maureen Tucker played with tribal force; Nico, a German vocalist brieﬂy added to the band by manager Andy Warhol, brought an icy femininity to the heated ennui in Reed’s songs. Rejected as nihilistic by the love crowd in 1967, the Banana Album (so named for its Warhol-designed cover), is the most prophetic rock album ever made.</string>
    <string name="exilesonmainstreet">A dirty whirl of basement blues and punk boogie, the Rolling Stones’ 1972 double LP was, according to Keith Richards, “maybe the best thing we did.” Indeed, inside its deliberately dense squall — Richards’ and Mick Taylor’s dogﬁght riffing, the lusty jump of the Bill Wyman–Charlie Watts rhythm engine, Mick Jagger’s caged-animal bark and burned-soul croon — is the Stones’ greatest album and Jagger and Richards’ deﬁnitive songwriting statement of outlaw pride and dedication to grit and cold-morning redemption.  In the existential shuffle of “Tumbling Dice,” the ­exhausted country beauty of “Torn and Frayed,” and the whiskey-soaked church of “Shine a Light,” you literally hear the Stones in exile: working at Richards’ villa in the South of France, on the run from media censure, British drug police (Jagger and Richards had been busted and arrested before), and the U.K.’s then-onerous tax code. The music rattles with corrosive abandon but also swings with a clear purpose — unconditional survival — in “Rocks Off” and “All Down the Line.” As Richards explained, “The Stones don’t have a home anymore — hence the exile — but they can still keep it together. Whatever people throw at us, we can still duck, improvise, overcome.” Great example: Richards ­recorded his jubilant romp “Happy” with only producer Jimmy Miller on drums and sax man Bobby Keys, while waiting for the other Stones to turn up for work. Exile on Main Street is the band at its ﬁghting best, armed with the blues, playing to win.</string>
    <string name="kindofblue">This painterly masterpiece is one of the most important, inﬂuential, and popular albums in jazz. At the time it was made, Kind of Blue was also a revolution all its own. Turning his back on standard chord progressions, trumpeter Miles Davis used modal scales as a starting point for composition and improvisation — breaking new ground with warmth, subtlety, and understatement in the thick of hard bop. Davis and his peerless band — bassist Paul Chambers, drummer Jimmy Cobb, pianist Bill Evans, and the titanic sax team of John Coltrane and Cannonball Adderley — soloed in uncluttered settings, typiﬁed by “melodic rather than harmonic variation,” as Davis put it. Two numbers, “All Blues” and “Freddie Freeloader” (the latter featuring Wynton Kelly at the ivories in place of Evans), are in 12-bar form, but Davis’ approach allowed his players a cool, new, collected freedom.</string>
    <string name="bitchesbrew"><![CDATA[In February 1969, Miles Davis recorded In a Silent Way, a bold step into ambient funk and electric futurism. Then just six months later, he was back in the studio, driven by his desire to assemble “the best damn rock & roll band in the world.” The idea was to connect his music to the audience of Jimi Hendrix and Sly Stone. The result was this double album of jazz-rock fusion, cut in three days of on-the-spot improvisations with an electric orchestra that included three keyboardists, three drummers, two bassists, saxophonist Wayne Shorter, and guitarist John McLaughlin. The music was full of visceral thrills and the brooding darkness Davis brought to everything he touched.]]></string>
    <string name="backinblack">In the middle of album rehearsals, singer Bon Scott went on a drinking spree; he choked on his vomit and was found dead in the back seat of a car. After two days of mourning, guitarist Malcolm Young thought, “Well, fuck this, I’m not gonna sit around mopin’ all fuckin’ year.” He called his brother, guitarist Angus Young, and they went back to work with replacement vocalist Brian Johnson. The resulting album has the relentless logic of a sledgehammer. Back in Black remains the purest distillation of hard rock: “Hells Bells,” “You Shook Me All Night Long,” and the title track have all become enduring anthems of strutting blues-based guitar.</string>
    <string name="ladysoul">Aretha Franklin’s third Atlantic album in less than two years is another classic, with “(You Make Me Feel Like) A Natural Woman,” “Ain’t No Way,” and a slinky version of the Rascals’ “Groovin’.” It was a year of triumph and turbulence for Franklin: Although she made the cover of Time, the magazine reported details of her rocky marriage to Ted White, then her manager. But Franklin channeled that frenzy into performances of funky pride and magisterial hurt. Among the best: the grand-prayer treatment of Curtis Mayfield’s “People Get Ready” and her explosive anguish on the hit “Chain of Fools.”</string>
    <string name="alovesupreme">Two important things happened to John Coltrane in 1957: The saxophonist left Miles Davis’ employ to join Thelonious Monk’s band and hit new heights in extended, ecstatic soloing. Coltrane also kicked his heroin addiction, a vital step in a religious awakening that climaxed with this legendary album-long hymn of praise. The indelible four-note theme of the first movement, “Acknowledgment,” is the humble foundation of the suite. But Coltrane’s majestic, often violent blowing (famously described as “sheets of sound”) is never self-aggrandizing. Coltrane soars with nothing but gratitude and joy. You can’t help but go with him.</string>
    <string name="appetitefordestruction">The biggest-selling debut album of the Eighties, Appetite hit the metal scene like an asteroid, bringing the grit and fury of Seventies rock back to a mainstream hard-rock scene that was starved for something real. Indiana-bred Axl Rose’s five-alarm yowl bowled over listeners. Guitarist Slash gave the band blues emotion and punk energy, while the rhythm section brought the funk on hits such as “Welcome to the Jungle.” When all the elements came together, as in the final two minutes of “Paradise City,” GN’R left all other Eighties metal bands in the dust, and they knew it, too. “A lot of rock bands are too fucking wimpy to have any sentiment or any emotion,” Rose said. “Unless they’re in pain.”</string>
</resources>